--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -49,6 +49,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="{% url 'lugares' %}">Lugares</a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'usuarios' %}">Usuarios</a>
+                </li>
             </ul>
 
             <form class="form-inline my-2 my-lg-0">
@@ -61,22 +64,22 @@
                     {% if user.is_authenticated %}
                         <li class="nav-item active">
                             <a class="nav-link"
-                               href="{% url 'usuario_profile' user.username %}"><img src="{{ user.imagen.url }}"
+                               href="{% url 'usuarios_profile' user.slug %}"><img src="{{ user.imagen.url }}"
                                                                                      height="30"
                                                                                      style="border-radius: 6px;">
                                 {{ user.username }}
                             </a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="{% url 'logout' %}">Salir</a>
+                            <a class="nav-link" href="{% url 'usuarios_logout' %}">Salir</a>
                         </li>
                     {% else %}
                         <li class="nav-item active">
-                            <a class="nav-link" href="{% url 'register' %}">Registrarse<span
+                            <a class="nav-link" href="{% url 'usuarios_register' %}">Registrarse<span
                                     class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="{% url 'login' %}">Iniciar Sesión</a>
+                            <a class="nav-link" href="{% url 'usuarios_login' %}">Iniciar Sesión</a>
                         </li>
                     {% endif %}
                 </ul>
