--- a/usuarios/templates/profile.html
+++ b/usuarios/templates/profile.html
@@ -2,7 +2,7 @@
 {#{% load static from staticfiles %}#}
 
 {% block title %}
-    Linkage | {{ user }}
+    Usuarios | {{ user }}
 {% endblock title %}
 
 {% block content %}
@@ -25,7 +25,7 @@
 
             <div class="form-row">
                 <label class="col-md-2"></label>
-                <a href="{% url 'change_user_image' user.username %}">Cambiar imagen</a>
+                <a href="{% url 'usuarios_change_image' user.username %}">Cambiar imagen</a>
             </div>
 
             <br>
@@ -57,7 +57,20 @@
 
             <div class="form-row">
                 <label class="col-md-2"></label>
-                <a href="{% url 'change_password' user.username %}">Cambiar Contraseña</a>
+                <a href="{% url 'usuarios_change_password' user.username %}">Cambiar Contraseña</a>
+
+            </div>
+
+{#            <div class="form-row">#}
+{#                <label class="col-md-2"></label>#}
+{#                <a href="{% url 'usuarios_delete' user.slug %}">Eliminar cuenta</a>#}
+{##}
+{#            </div>#}
+
+            <div class="form-row">
+                <label class="col-md-2"></label>
+                <a href="{% url 'usuarios_update' user.slug %}">Actualizar datos</a>
+
             </div>
         </div>
 
