--- a/usuarios/templates/usuarios.html
+++ b/usuarios/templates/usuarios.html
@@ -2,17 +2,17 @@
 {% load static from staticfiles %}
 
 {% block title %}
-    Linkage|Auth
+    Linkage | Usuarios
 {% endblock title %}
 
 {% block content %}
 
     <h1>Auth Page!</h1>
     {% if user.is_authenticated %}
-        <a href="{% url 'usuario_profile' user.username %}">Ver mi perfil</a>
+        <a href="{% url 'usuarios_profile' user.username %}">Ver mi perfil</a>
     {% else %}
-        <a href="{% url 'register' %}">Registrarme</a>
-        <a href="{% url 'login' %}">Ingresar</a>
+        <a href="{% url 'usuarios_register' %}">Registrarme</a>
+        <a href="{% url 'usuarios_login' %}">Ingresar</a>
     {% endif %}
 
 {% endblock content %}
